# flow_engine

./: .cursorignore  .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  sepc.md
.cursor/: mcp.json
.cursor/rules/: design-principles.mdc  frontend-ux-component-guidelines.mdc  mysql-local-db.mdc
data/flows/: cyber_alarm_diagnosis.yaml  demo_flow.yaml  (+2 more)
data/lookup/: apps.json  (+1 more)
dict/: dictionary.yaml
docs/: design-principles.md  frontend-ux-component-standard.md  runtime-design.md  starlark-integration-prompts.md
examples/: cyber_alert_diagnosis.yaml  example_01_sequential_pipeline.yaml  example_02_parallel_fanout.yaml  example_03_conditional_branch.yaml  example_04_loop_aggregation.yaml  example_05_subflow_namespace.yaml  example_06_retry_and_jump.yaml  example_07_hooks_lifecycle.yaml
flow_engine/: __init__.py  __main__.py  compiler.py  context.py  data_dict.py  dict_store.py  http_api.py  loader.py  lookup_import.py  lookup_service.py  lookup_store.py  models.py  orchestrator.py  resources.py  starlark_glue.py  yaml_store.py
flow_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_data_dict.py  test_db_config.py  test_event_bus.py  test_example_flows.py  test_lookup.py  test_loop_concurrency.py  test_managed_runner.py  test_mcp_dml_validation.py  test_mcp_read_validation.py  test_orchestrator.py  test_publish_api.py  test_run_demo_flow.py  test_runner_api.py  test_runner_coordinator.py  test_runner_mock.py  test_runner_mode_context.py  test_runner_models.py  test_runner_persistence.py  test_signal_handlers.py  test_smoke.py  test_starlark_runtime.py  test_version_store.py
web/: .gitignore  index.html  package-lock.json  package.json
(+133 files in other folders)
